[package]
name = "subflow_sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subflow_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
getrandom = { version = "0.1.14", features = ["dummy"] }
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
